# m365ctl

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NEXT-SESSION.md  README.md  config.toml.example  pyproject.toml  release-please-config.json
.githooks/: pre-push
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: roadmap.md
docs/mail/: convenience-commands.md
docs/ops/: pnp-powershell-setup.md
docs/setup/: azure-app-registration.md  certificate-auth.md  first-run.md  migrating-from-fazla-od.md
docs/superpowers/plans/: 2026-04-24-catalog.md  2026-04-24-foundation-and-auth.md  2026-04-24-mutations-and-safety.md  2026-04-24-phase-0-rename-restructure-publish.md  2026-04-24-phase-1-mail-readers.md  2026-04-24-phase-2-mail-folder-category-crud.md  2026-04-24-phase-3-mail-safe-message-mutations.md  2026-04-24-recycle-bin-odfb-followup.md  2026-04-24-search-and-readonly-ops.md  2026-04-25-phase-10-triage-dsl.md  2026-04-25-phase-10-x-dsl-predicates.md  2026-04-25-phase-11-export.md  2026-04-25-phase-12-multi-mailbox.md  2026-04-25-phase-13-send-as.md  2026-04-25-phase-14-convenience-1.0.0.md  2026-04-25-phase-4-mail-soft-delete-restore.md  2026-04-25-phase-5a-2-chunked-upload.md  2026-04-25-phase-5a-mail-compose.md  2026-04-25-phase-5b-scheduled-send.md  2026-04-25-phase-6-hard-delete.md  2026-04-25-phase-7-mail-catalog.md  2026-04-25-phase-8-rules-crud.md  2026-04-25-phase-9-mailbox-settings.md  2026-04-26-phase-10-y-thread-predicate.md  2026-04-26-phase-10-z-headers-predicate.md  2026-04-26-phase-11-x-mid-folder-resume.md  2026-04-26-phase-4-x-undo-fallbacks.md  2026-04-26-phase-7-x-perf.md  2026-05-01-graph-batch-support.md
docs/superpowers/specs/: 2026-04-24-fazla-onedrive-toolkit-design.md  2026-04-24-m365ctl-design.md  2026-04-24-m365ctl-mail-module.md  2026-05-01-graph-batch-support-design.md
scripts/mail/rules/: archive-newsletters.yaml  daily-triage.yaml  triage.example.yaml
scripts/mail/rules-server-side/: example-rule.yaml
scripts/ps/: Set-FazlaLabel.ps1  Set-M365ctlLabel.ps1  Set-MailboxDelegate.ps1  _FazlaRecycleHelpers.ps1  _M365ctlRecycleHelpers.ps1  audit-sharing.ps1  convert-cert.sh  recycle-purge.ps1  recycle-restore.ps1
scripts/setup/: create-cert.sh
src/fazla_od/: __main__.py  audit.py  auth.py  config.py  graph.py  planfile.py  prompts.py  retry.py  safety.py
src/fazla_od/catalog/: crawl.py  db.py  schema.py
src/fazla_od/cli/: __main__.py  _common.py  audit_sharing.py  auth.py  catalog.py  clean.py  copy.py  delete.py  download.py  inventory.py  label.py  move.py  rename.py  search.py  undo.py
src/fazla_od/download/: fetcher.py  planner.py
src/fazla_od/mutate/: _pwsh.py  clean.py  copy.py  move.py  (+4 more)
src/m365ctl/: __main__.py  audit.py  auth.py  graph.py  retry.py  safety.py
tests/: conftest.py  test_audit.py  test_auth.py  test_batch.py  test_catalog_crawl.py  test_catalog_crawl_tenant.py  test_catalog_db.py  test_catalog_normalize.py  test_catalog_queries.py  test_catalog_schema.py  test_cli_audit_sharing.py  test_cli_auth.py  test_cli_catalog.py  test_cli_clean.py  test_cli_common.py  test_cli_copy.py  test_cli_delete.py  test_cli_download.py  test_cli_inventory.py  test_cli_label.py  test_cli_mail_archive.py  test_cli_mail_attach.py  test_cli_mail_attach_add_large.py  test_cli_mail_attach_write.py  test_cli_mail_catalog.py  test_cli_mail_categories.py  test_cli_mail_categories_mutate.py  test_cli_mail_categorize.py  test_cli_mail_clean.py  test_cli_mail_copy.py  test_cli_mail_delegate.py  test_cli_mail_delete.py  test_cli_mail_digest.py  test_cli_mail_draft.py  test_cli_mail_empty.py  test_cli_mail_export.py  test_cli_mail_flag.py  test_cli_mail_focus.py  test_cli_mail_folders.py  test_cli_mail_folders_mutate.py  (+117 more)
(+171 files in other folders)
