[project]
name = "m365ctl"
version = "0.1.0"
description = "Admin CLI for Microsoft 365 OneDrive + SharePoint + Mail via Microsoft Graph."
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
    "duckdb>=1.1",
    "httpx>=0.27",
    "msal>=1.28",
    "msal-extensions>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "ruff>=0.5",
]

[project.scripts]
m365ctl = "m365ctl.cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/m365ctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "live: hits real Microsoft Graph; requires M365CTL_LIVE_TESTS=1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
