[project]
name = "m365ctl"
version = "1.12.2"
description = "Admin CLI for Microsoft 365 OneDrive + SharePoint + Mail via Microsoft Graph."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Arda Eren", email = "ardaeren13@gmail.com" }]
keywords = [
    "microsoft-365",
    "microsoft-graph",
    "onedrive",
    "sharepoint",
    "outlook",
    "exchange-online",
    "cli",
    "sysadmin",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: System :: Archiving",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=42",
    "duckdb>=1.1",
    "httpx>=0.27",
    "msal>=1.28",
    "msal-extensions>=1.2",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/aren13/m365ctl"
Repository = "https://github.com/aren13/m365ctl"
Issues = "https://github.com/aren13/m365ctl/issues"
Changelog = "https://github.com/aren13/m365ctl/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.11",
]

[project.scripts]
m365ctl = "m365ctl.cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/m365ctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "live: hits real Microsoft Graph; requires M365CTL_LIVE_TESTS=1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
